FEATURE: UI   | Beginner configuration user mode provides a simplified interface [Gouss]
FEATURE: UI   | Support for --closedown parameter to org.gudy.azureus2.ui.swt.Main to closedown an existing AZ instance [Parg]
FEATURE: Core | Support for .torrent file download using just infohash hex string (via DHT magnet lookup mechanism) [Nolar]

CHANGE: Core  | Countermeasures against swarm DOS/poisoning [Nolar]
CHANGE: Core  | Health status for swarms where all known peers are connected now reported as OK [Parg]
CHANGE: Core  | Friendly hash-checking option now only applied during recheck operations and delay based on piece size [Parg]
CHANGE: Plug  | Major refactoring of plugin interface to separate out UI-level and core-level stuff [Parg]
CHANGE: Core  | Don't automatically remove directory contents shares if they (appear to) have been deleted [Parg]
CHANGE: Core  | Improved algorithm for detecting DHT port reachability [Parg]
CHANGE: Core  | DHT - removed cache-distance metrics and added value versions to handle value evolution correctly [Parg]
CHANGE: Core  | Reduced thread count by aggregating async listener dispatchers [Parg]
CHANGE: Core  | Major refactoring of Download and Disk managers [Parg]
CHANGE: Core  | Download totals don't include hash fails and discards and aren't included in share-ratio calculation [Parg]
CHANGE: Core  | "Max simultaneous outbound connection attempts" option no longer accepts zero as a disable value [Nolar]
CHANGE: UI    | Update to the latest release SWT library (3.1.1) [Nolar]
CHANGE: Core  | Under OSX, new bundle launches using the Java Preferences application configured JVM, enabling JRE 5.0 support [Nolar]
CHANGE: Core  | Under Windows, now runs via a launcher built by exe4j - taskmanager process is now "Azureus.exe" [Nolar,Parg]

BUGFIX: Core  | Fix interested flag being set sometimes when seeding [Nolar]
BUGFIX: Core  | Wrong file name returned for stopped simple torrents [Parg]