@@ -1687,6 +1687,7 @@ Views.plugins.UPnP.title.tooltip=Universal Plug and Play
 
 openUrl.url.info=Supports http, https, magnet and raw hex infohash strings
 
-
+MyTorrentsView.swarm_average_completion=Swarm Average Completion
+MyTorrentsView.swarm_average_completion.info=The average completion percentage of peers in the swarm
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
